# VEIC

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json
.coord/: DECISIONS.md  PROJECT_STATUS.md  agents.json  tasks.json
.github/workflows/: soft-ci.yml
docs/coordination/: AGENT_COLLABORATION.md  BACKEND_FRONTEND_SYNC.md  PM_MONITORING.md
scripts/coord/: README.md  veic-coord.ps1
soft/: .gitignore  .veicrun.json  index.html  package-lock.json  package.json
soft/docs/: PROJECT_PLAN.md  README.md
soft/docs/c4/: ARCHITECTURE.md
soft/docs/database/: P3_DATABASE_TABLES.md  p3_server_authoritative.sql  p3_tauri_local_cache.sql
soft/docs/outsource/: ACCEPTANCE.md  BACKEND_SYNC.md  BACKEND_UPDATE_LOG.md  CURRENT_STATE.md  DEVELOPMENT_GUIDE.md  ONBOARDING.md  README.md  TASK_BOARD.md
soft/src/: App.auth.test.tsx  App.tsx  styles.css  tauri.test.ts  tauri.ts  types.ts
soft/src-tauri/: Cargo.toml  tauri.conf.json
soft/src-tauri/capabilities/: default.json
soft/src-tauri/src/: main.rs
soft/src/api/: client.test.ts  client.ts
soft/src/hooks/: useAuth.ts  useHealth.ts  useProviderPolicies.ts  useResourceDetail.ts  useRuntimeLog.ts  useRuntimeProbe.ts  useRuntimeRecords.ts  useTaskRunner.ts  useTimeline.ts  useWorkspaces.ts
soft/src/test/: setup.ts
soft/src/utils/: commands.test.ts  commands.ts  format.ts  runtime.ts  search.ts  (+1 more)
src/: App.tsx  styles.css
src/components/: BayerBackground.tsx  HomePage.tsx  OpeningSplash.tsx  project-card.tsx
src/data/: config.ts  resume.tsx
src/layouts/: Layout.astro
(+25 files in other folders)
