[package]
name = "veic-runtime-desktop"
version = "0.1.0"
description = "VEIC Runtime desktop workspace client"
authors = ["VEIC Studio"]
edition = "2021"
build = "build.rs"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
